# ai-scout

./: .dockerignore  .gitignore  Dockerfile  README.md  batch0_enrich.py  batch3_enrich.py  batch_write.py  check_enrich.sh  filter.py  fly.toml  post_enrich.sh  pyproject.toml  run_pipeline.py  scout.py  smithery.yaml
.github/workflows/: update.yml
.serena/: project.yml
data/: .gitkeep  ai_scout.db  tfidf_index.pkl
scripts/: parallel_enrich.py
src/ai_scout/: __init__.py  api.py  collector.py  collector_async.py  db.py  formatter.py  migrate.py  migrate_v04.py  scorer.py  server.py
src/ai_scout/hermes/: README.md  __init__.py  discover.py  embed.py  enrich.py  maintain.py
