[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-scout"
version = "0.4.0"
description = "AI Scout — AI Agent Capability Discovery Engine. 发现→分类→评分→MCP API。面向AI Agent的能力发现与推荐服务。"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0",
    "fastapi>=0.100",
    "uvicorn>=0.25",
    "requests>=2.31",
    "aiohttp>=3.9",
    "scikit-learn>=1.3",
]

[project.scripts]
ai-scout = "ai_scout.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_scout"]
